--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 cycler==0.10.0
+install==1.3.4
 kiwisolver==1.3.1
 matplotlib==3.3.4
 numpy==1.20.1
 Pillow==8.1.0
+pkg-resources==0.0.0
 pyparsing==2.4.7
 python-dateutil==2.8.1
+setuptools-git-versioning==1.2.10
 six==1.15.0
 ttkthemes==3.2.2
